<resources>
    <string name="app_name">Gerenciador Financeiro</string>
    <string name="accounts">Contas</string>
    <string name="transactions">Transações</string>
    <string name="statements">Extratos</string>
    <string name="total">Total</string>
    <string name="add_account">Adicionar conta</string>
    <string name="account_details">Detalhes da conta</string>
    <string name="add_transaction">Adicionar transação</string>
    <string name="transaction_details">Detalhes da transação</string>
    <string name="description">Descrição</string>
    <string name="initial_balance">Saldo inicial</string>
    <string name="balance">Saldo</string>
    <string name="save">Salvar</string>
    <string name="remove">Remover</string>
    <string name="cancel">Cancelar</string>
    <string name="account">Conta</string>
    <string name="origin_account">Conta de origem</string>
    <string name="destination_account">Conta de destino</string>
    <string name="value">Valor</string>
    <string name="type">Tipo</string>
    <string name="credit">Crédito</string>
    <string name="debit">Débito</string>
    <string name="transfer">Transferência</string>
    <string name="fill_all_fields">Preencha todos os campos!</string>
    <string name="date">Data</string>
    <string name="to">para</string>
    <string name="value_date">Valor/data</string>
    <string name="by_account">Por conta</string>
    <string name="by_transaction_operation">Por natureza da transação</string>
    <string name="by_transaction_type">Por tipo de transação</string>
    <string name="apply">Aplicar</string>
    <string name="from">De</string>
    <string name="until">Até</string>
    <string name="periodicity">Periodicidade</string>
    <string name="none">Nenhuma</string>
    <string name="daily">Diária</string>
    <string name="weekly">Semanal</string>
    <string name="monthly">Mensal</string>
    <string name="repetitions">Repetições</string>

    <string-array name="transaction_types">
        <item>Alimentação</item>
        <item>Saúde</item>
        <item>Transporte</item>
        <item>Moradia</item>
        <item>Educação</item>
        <item>Lazer</item>
        <item>Tarifas bancárias</item>
        <item>Luz</item>
        <item>Água</item>
        <item>Telefone</item>
        <item>Outros</item>
    </string-array>

    <string-array name="transaction_natures">
        <item>Alimentação</item>
        <item>Saúde</item>
        <item>Transporte</item>
        <item>Moradia</item>
        <item>Educação</item>
        <item>Lazer</item>
        <item>Tarifas bancárias</item>
        <item>Luz</item>
        <item>Água</item>
        <item>Telefone</item>
        <item>Outros</item>
    </string-array>
</resources>
