<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.transaction.TransactionAddActivity">

    <data>

        <variable
            name="transaction"
            type="br.edu.ifsp.scl.sdm.gerenciadorfinanceiro.domain.model.Transaction" />

    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin">

        <RadioGroup
            android:id="@+id/rgOperation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbCredit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit" />

            <RadioButton
                android:id="@+id/rbDebit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/debit" />

            <RadioButton
                android:id="@+id/rbTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transfer" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/rgOperation"
            app:layout_constraintBottom_toTopOf="@id/tvOriginAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/description"
                android:text="@={transaction.description}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.Group
            android:id="@+id/gpOriginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvOriginAccount,spOriginAccount" />

        <TextView
            android:id="@+id/tvOriginAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textAppearance="@style/TextAppearance.Design.Hint"
            android:text="@string/origin_account"
            app:layout_constraintTop_toBottomOf="@id/tilDescription"
            app:layout_constraintBottom_toTopOf="@id/spOriginAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spOriginAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOriginAccount"
            app:layout_constraintBottom_toTopOf="@id/tvDestinationAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.Group
            android:id="@+id/gpDestinationAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvDestinationAccount,spDestinationAccount" />

        <TextView
            android:id="@+id/tvDestinationAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textAppearance="@style/TextAppearance.Design.Hint"
            android:text="@string/destination_account"
            app:layout_constraintTop_toBottomOf="@id/spOriginAccount"
            app:layout_constraintBottom_toTopOf="@id/spDestinationAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spDestinationAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDestinationAccount"
            app:layout_constraintBottom_toTopOf="@id/tilValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/spOriginAccount"
            app:layout_constraintBottom_toTopOf="@id/tvType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/value"
                android:text="@={transaction.value}" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textAppearance="@style/TextAppearance.Design.Hint"
            android:text="@string/type"
            app:layout_constraintTop_toBottomOf="@id/tilValue"
            app:layout_constraintBottom_toTopOf="@id/spType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/transaction_types"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            app:layout_constraintBottom_toTopOf="@id/tilDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/spType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="numberDecimal"
                android:hint="@string/date"
                android:text="@={transaction.date}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>