<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rgFilterType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by_account" />

            <RadioButton
                android:id="@+id/rbTransactionOperation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by_transaction_operation" />

            <RadioButton
                android:id="@+id/rbTransactionType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by_transaction_type" />

        </RadioGroup>

        <android.support.constraint.Group
            android:id="@+id/gpAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="spAccount,tilFrom,tilUntil" />

        <android.support.constraint.Group
            android:id="@+id/gpTransactionOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rgOperation" />

        <android.support.constraint.Group
            android:id="@+id/gpTransactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="spType" />
        
        <Spinner
            android:id="@+id/spAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/rgFilterType"
            app:layout_constraintBottom_toTopOf="@id/tilFrom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/spAccount"
            app:layout_constraintBottom_toTopOf="@id/rgOperation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tilUntil">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/from" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUntil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toTopOf="@id/tilFrom"
            app:layout_constraintBottom_toBottomOf="@id/tilFrom"
            app:layout_constraintStart_toEndOf="@id/tilFrom"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUntil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/until" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgOperation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tilFrom"
            app:layout_constraintBottom_toTopOf="@id/spType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbCredit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credit" />

            <RadioButton
                android:id="@+id/rbDebit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/debit" />

            <RadioButton
                android:id="@+id/rbTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transfer" />

        </RadioGroup>
        
        <Spinner
            android:id="@+id/spType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:entries="@array/transaction_types"
            app:layout_constraintTop_toBottomOf="@id/rgOperation"
            app:layout_constraintBottom_toTopOf="@id/btApply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <Button
            android:id="@+id/btApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@id/spType"
            app:layout_constraintBottom_toTopOf="@id/vwDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/vwDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/btApply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/vwDivider"
            app:layout_constraintBottom_toTopOf="@id/rvTransactions"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvValueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/value_date"
            app:layout_constraintTop_toTopOf="@id/tvDescription"
            app:layout_constraintBottom_toBottomOf="@id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_transaction" />

    </android.support.constraint.ConstraintLayout>

</layout>